test: Modificate product service code due to creation of order creation-related service test code and modification of conversion method